Placement correction Mobile v1

--- a/style.css
+++ b/style.css
@@ -514,7 +514,7 @@ nav .fas{
         margin-right: 20px;
     }
     .contact-left, .contact-right{
-        margin-top: -20px;
+        margin-top: 20px;
         flex-basis: 100%;
         font-size: 14px;
     }
